# serde-klv

./: Cargo.toml  LICENSE-MIT  Makefile  README.md  memo.md
.github/workflows/: ci.yml
benches/: benchmark.rs
src/: checksum.rs  de.rs  error.rs  lib.rs  ser.rs  uasdls.rs
